search bar grow, text not grow, mobile alignment fix

--- a/public/css/mobile-styles.css
+++ b/public/css/mobile-styles.css
@@ -407,6 +407,10 @@
         row-gap: 0px;
     }
 
+	#bg-header-fixed > .flex-container > h3 {
+		flex-grow: 1;
+	}
+
     #bg-header-fixed > .flex-container > h3,
     #bg-header-fixed > .flex-container > #background_fitting,
     #bg-header-fixed > .flex-container > #auto_background,
